[package]
name = "ccommon_rs"
version = "0.1.0"
authors = ["Jonathan Simms <jsimms@twitter.com>"]
links = "ccommon"
build = "build.rs"

[lib]
name = "ccommon_rs"
crate-type = ["lib", "dylib", "rlib", "staticlib"]

[dependencies]

cc_binding = { path = "../cc_binding" }
log = "~0.4"
libc = "~0.2.42"
failure = "~0.1"
failure_derive = "~0.1"
time = "~0.1.40"
lazy_static = "~1.0"
tempfile = "~3.0.2"
